--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
     justify-content: space-around;
     margin-top: 2rem; } }
 
-@media (max-width: 1200px) {
+@media (max-width: 800px) {
   nav {
     background-color: #121924 !important; } }
 
@@ -119,6 +119,7 @@ main {
   align-items: center;
   justify-content: center;
   margin-top: 3rem;
+  margin-bottom: 4rem;
   background-color: transparent; }
 
 .backTransp {
@@ -141,17 +142,28 @@ main {
   transform: scale(1.3); }
 
 .imgAndList {
-  display: flex; }
+  display: flex;
+  margin-top: 3rem; }
 
 .profilePic {
-  border-radius: 50%; }
+  border-radius: 5%; }
+
+.profileDetails:hover {
+  color: #138396;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  text-indent: 30px; }
+
+.profileDetailsBox {
+  margin-top: 2rem; }
 
 .functionalities {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-top: 4rem; }
+  margin-top: 2rem; }
 
 .funcionalitiesElem {
   font-size: 1.3rem;
@@ -216,7 +228,7 @@ main {
   font-family: 'Josefin Sans', sans-serif;
   text-transform: uppercase;
   font-weight: bolder;
-  font-size: 1.1875rem; }
+  opacity: 1; }
 
 .usersList:hover {
   color: white; }
@@ -225,8 +237,10 @@ main {
   margin-top: 2rem; }
 
 .gifNews {
-  width: 400px;
-  max-height: 300px; }
+  width: 500px;
+  border-radius: 3%;
+  max-height: auto;
+  margin-right: 20px; }
 
 hr.line {
   border-top: 1px solid white; }
