--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,7 +13,7 @@
   } 
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 800px) {
   nav {
     background-color: #121924 !important;
   }
@@ -168,6 +168,7 @@ main {
   align-items: center;
   justify-content: center;
   margin-top: 3rem;
+  margin-bottom: 4rem;
   background-color: transparent;
 }
 
@@ -196,10 +197,23 @@ main {
 
 .imgAndList {
   display: flex;
+  margin-top: 3rem;
 }
 
 .profilePic {
-  border-radius: 50%;
+  border-radius: 5%;
+}
+
+.profileDetails:hover {
+  color: #138396;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  text-indent: 30px;
+}
+
+.profileDetailsBox {
+  margin-top: 2rem;
 }
 
 // functionalities
@@ -209,7 +223,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .funcionalitiesElem {
@@ -298,7 +312,7 @@ main {
   font-family: 'Josefin Sans', sans-serif;
   text-transform: uppercase;
   font-weight: bolder;
-  font-size: 1.1875rem;
+  opacity: 1;
 }
 
 .usersList:hover {
@@ -310,8 +324,10 @@ margin-top: 2rem;
 }
 
 .gifNews {
-  width: 400px;
-  max-height: 300px;
+  width: 500px;
+  border-radius: 3%;
+  max-height: auto;
+  margin-right: 20px;
 }
 
 hr.line {
