--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="../stylesheets/style.css" />
-  <script src="/javascripts/cursor.js"></script>
   <style type="text/css">
     * {cursor: url(http://cur.cursors-4u.net/others/oth-1/oth24.cur), auto !important;}
   </style><a href="http://www.cursors-4u.com/cursor/2005/07/07/oth24.html" target="_blank"
@@ -52,7 +51,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
-  {{!-- script with cursor effects --}}
+  {{!-- script js --}}
   <script src="/javascripts/script.js"></script>
 
   {{!-- animations gsap --}}
