edit username, edit post

--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -137,6 +137,9 @@
                                         </div>
                                     </div>
                                 </div>
+                                <button class="btn btn-lg btn-block text-center btn-primary buttonsProfile">
+                                    <a class="text-white funcionalitiesElem" href="/editpost/{{this._id}}">edit</a>
+                                </button>
                             </div>
                             {{/if}}
                         </div>
