--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,7 +146,8 @@ main {
   margin-top: 3rem; }
 
 .profilePic {
-  border-radius: 5%; }
+  border-radius: 5%;
+  object-fit: cover; }
 
 .profileDetails:hover {
   color: #138396;
@@ -264,12 +265,15 @@ hr.line {
   color: white; }
 
 .postBox {
+  display: flex;
+  justify-content: space-evenly;
   margin-top: 1rem;
   margin-bottom: 1rem; }
 
 .photoPost {
   width: 14rem;
-  height: 14rem; }
+  height: 14rem;
+  object-fit: contain; }
 
 .postAuthor {
   color: #3b9eb0 !important;
