--- a/views/profile/edit-profile.hbs
+++ b/views/profile/edit-profile.hbs
@@ -35,6 +35,11 @@
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
+                <label for="age">Change your name:</label>
+                <input type="text" class="form-control" name="username" value="{{user.username}}"
+                    placeholder="you can be whoever you want">
+            </div>
+            <div class="form-group col-md-6">
                 <label for="age">Enter your age:</label>
                 <input type="text" class="form-control" name="age" value="{{user.age}}"
                     placeholder="i was young too, once">
