--- a/views/post/edit.hbs
+++ b/views/post/edit.hbs
@@ -28,6 +28,6 @@
 <input type="text" name="title" value="{{post.title}}">
 <input type="text" name="body" value="{{post.body}}">
 <span>{{user.username}}</span>
-<a href="../newsfeed">send</a>
+<button type="submit"> send</button>
 
 </form>
